[package]
name = "ipld-nostd"
version = "0.2.0"
edition = "2021"
authors = [
  "Karim Agha <karim.dev@gmail.com>",
  "dignifiedquire <me@dignifiedquire.com>",
  "David Craven <david@craven.ch>",
  "Volker Mische <volker.mische@gmail.com>",
]
license = "Apache-2.0/MIT"
rust-version = "1.70.0"

[lib]
doctest = false

[features]
default = []
no-cid-as-bytes = []

[dependencies]
core2 = { version = "0.4", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_bytes = { version = "0.11.15" }
unsigned-varint = { version = "0.8", default-features = false }
thiserror_core2 = "2.0.1"
scale = { version = "3.6", features = [
  "derive",
  "max-encoded-len",
], default-features = false, package = "parity-scale-codec" }
base-x = { version = "0.2.7", default-features = false }
base256emoji = { version = "1.0.2", default-features = false }
data-encoding = { version = "2.3.1", default-features = false, features = [
  "alloc",
] }
data-encoding-macro = "0.1.9"
cbor4ii = { version = "0.2.14", default-features = false, features = [
  "use_alloc",
] }
scopeguard = "1.1.0"

[dev-dependencies]
test-strategy = "0.4"
multihash-codetable = { version = "0.1.3", features = ["blake3"] }
serde_test = "1.0"
serde_derive = { version = "1.0.164", default-features = false }
serde_bytes = { version = "0.11.9", default-features = false, features = [
  "alloc",
] }
serde-transcode = "1.1.1"
serde_json = { version = "1.0" }
itertools = { version = "0.13", default-features = false }
blake3 = "1.5"
